<resources>
    <string name="app_name">Homium</string>
    <string name="answer_yes">Ja</string>
    <string name="answer_no">Nein</string>
    <string name="error">Fehler</string>
    <string name="dummy">{0}</string>
    <string name="setting_vibration">Vibration</string>
    <string name="setting_shopping_sort">Sortierung der Einkaufsliste</string>
    <string name="setting_shopping_sort_normal">Neuste unten anfügen</string>
    <string name="setting_shopping_sort_reversed">Neuste oben anfügen</string>
    <string name="setting_shopping_check_behaviour">Sollen abgehakte Items beim Swipen in die Inventarliste verschoben werden?</string>
    <string name="setting_shopping_check_behaviour_always">Immer</string>
    <string name="setting_shopping_check_behaviour_never">Nie</string>
    <string name="setting_shopping_check_behaviour_question">Jedes Mal Fragen</string>
    <string name="setting_shopping_check_behaviour_question_alert_message">Sollen die abgehakte Items in die Inventarliste verschoben werden?</string>
    <string name="setting_speech_assistent_delete_question">Sicherheitsfrage vor Löschaktionen</string>
    <string name="onboarding_welcome_headline">Willkommen zu Homium!</string>
    <string name="onboarding_shopping_headline">So verwendest du die Einkaufsliste</string>
    <string name="onboarding_comingSoon_headline">Coming Soon ;)</string>
    <string name="onboarding_recipe_headline">Erstelle eigene Rezepte</string>
    <string name="onboarding_speachAssistant_headline">Der Sprachassistent zur leichteren Bedienung</string>
    <string name="onboarding_welcome">Willkommen zu Homeium - deinem Haushaltsassistenten!
    Es folgt eine kleine Erklärung zur Bedienung der App</string>
    <string name="onboarding_shopping">Erstelle eine Einkaufsliste für den Wocheneinkauf. Markiere per Antippen deine Produkte und entferne
        die eingekauften Elemente per Swipe von der Liste. Ein Bearbeiten ist ganz einfach per langem Tippen möglich. </string>
    <string name="onboarding_moreFeatures">Du kannst dich auf weitere Features wie eine Inventarliste, ein Bilanzbuch, uvm. freuen!</string>
    <string name="onboarding_speachAssistant">Für eine intuitivere Bedienung ist der Homium-Sprachassistent eine Möglichkeit zum Steuern der App. Der Sprachassistenz selbst ruft nur Kommandos
        ab, wenn er aufgerufen wird und sendet somit keine Daten ungewollt an Dritte weiter.</string>
    <string name="onboarding_recipe">Verwalte deine Rezepte mit den entsprechenden Zutaten und erstelle Notizen zur Zubereitung. Verknüpfe die Rezeptverwaltung mit dem Inventar
        und erhalte einen Überblick, was du mit den vorhandenen Lebensmitteln kochen kannst.</string>
    <string name="screentitle_edit_shopppingitem_add">Produkt hinzufügen</string>
    <string name="screentitle_edit_shoppingitem_edit">Produkt bearbeiten</string>
    <string name="screentitle_main_actionmode_shopping">Optionen</string>
    <string name="screentitle_main_actionmode_inventory">Optionen</string>
    <string name="screentitle_edit_ingredient_add">Zutat hinzufügen</string>
    <string name="screentitle_edit_ingredient_edit">Zutat bearbeiten</string>
    <string name="screentitle_edit_inventoryitem_add">Produkt hinzufügen</string>
    <string name="screentitle_edit_inventoryitem_edit">Produkt bearbeiten</string>
    <string name="head_general_settings">Allgemeine Einstellungen</string>
    <string name="actionbar_main_testzone">Testzone</string>
    <string name="actionbar_main_speech_assistent">Sprachassistent</string>
    <string name="actionbar_main_actionmode_delete">Löschen</string>
    <string name="actionbar_main_actionmode_edit">Bearbeiten</string>
    <string name="actionbar_main_actionmode_check">Auswählen</string>
    <string name="title_shopping">Einkaufen</string>
    <string name="title_inventory">Inventar</string>
    <string name="title_recipes">Rezepte</string>
    <string name="title_money">Bilanz</string>
    <string name="title_settings">Einstellungen</string>
    <string name="title_speech_assistent">Sprachassistent</string>
    <string name="shopping_list_delete_question">Sollen die ausgewählten Listenelemente wirklich gelöscht löschen?</string>
    <string name="shopping_item_delete_question">Sollen das ausgewählte Einkaufselement wirklich gelöscht löschen?</string>
    <string name="shopping_title_edit_name">Was möchtest du einkaufen?</string>
    <string name="shopping_hint_edit_name">Name des gewünschten Produktes</string>
    <string name="shopping_hint_edit_quantity">Menge des Produktes</string>
    <string name="shopping_btn_edit_delete">Einkaufsprodukt löschen</string>
    <string name="ingredient_title_edit_name">Um welche Zutat handelt es sich?</string>
    <string name="ingredient_hint_edit_name">Name der Zutat</string>
    <string name="ingredient_hint_edit_quantity">Menge der Zutat</string>
    <string name="ingredient_btn_edit_delete">Zutat löschen</string>
    <string name="actionbar_edit_confirm">Bestätigen</string>
    <string name="title_edit_quantity">Wie viel?</string>
    <string name="title_edit_unit">Welche Einheit?</string>
    <string name="image_description">Bild</string>
    <string name="txtView_recipesName">Rezeptname</string>
    <string name="recipeEdit_title_add">Rezept hinzufügen</string>
    <string name="recipeEdit_title_edit">Rezept bearbeiten</string>
    <string name="recipe_title">Rezept-Name</string>
    <string name="recipe_description">Beschreibung</string>
    <string name="recipe_ingredients">Zutaten</string>
    <string name="inventory_edit_title_name">Was möchtest du verwalten?</string>
    <string name="inventory_edit_button_delete_text">Inventarelement löschen</string>
    <string name="inventory_edit_input_name_hint">Name des Produkts</string>
    <string name="inventory_edit_input_location_hint">Lagerort des Produkts</string>
    <string name="inventory_edit_button_delete_question">Soll das ausgewählte Produkt wirklich aus dem Inventar gelöscht werden?</string>
    <string name="notification_edited_shoppingitem_sucess">Produkt erfolgreich aktualisiert</string>
    <string name="notification_delete_shoppingitem_sucess">Produkt erfolgreich gelöscht</string>
    <string name="notification_delete_inventoryitem_sucess">Inventarelement erfolgreich gelöscht</string>
    <string name="notification_remove_bought_shoppingitems">Alle ausgewählten Elemente der Einkaufsliste wurden gelöscht.</string>
    <string name="notification_remove_all_shoppingitems">Alle Elemente der Einkaufsliste wurden gelöscht.</string>
    <string name="notification_remove_all_inventoryitems">Das gesamte Inventar wurde erfolgreich gelöscht.</string>
    <string name="errormsg_invalid_parameters">Fehler: Anscheinend liegt eine ungültige Eingabe vor. Bitte überprüfe die Eingabeelemente und versuche es erneut.</string>
    <string name="errormsg_insert_shoppingitem_failed">Fehler: Das Einkaufselement konnte nicht hinzugefügt werden. Bitte versuche es erneut.</string>
    <string name="errormsg_delete_shopping_failed">Fehler: Anscheinend ist beim Löschvorgang aus der Einkaufsliste etwas schiefgegangen.</string>
    <string name="errormsg_unknown_error_with_speech_assistent">Ein unerwarter Fehler mit der Spracheingabefunktion ist aufgetaucht. Bitte versuche es erneut oder überprüfe deine Einstellungen für die Spracheingabe des Systems.</string>
    <string name="errormsg_delete_inventory_failed">Fehler: Anscheinend ist beim Löschvorgang aus der Inventarliste etwas schiefgegangen.</string>
    <string name="assistent_msg_sorry">Leider wurde kein passender Befehl gefunden oder es wurden ungültige Werte angegeben. Bitte versuche es erneut</string>
    <string name="assistent_msg_shoppingitem_added">Ein neues Einkaufselement wurde erfolgreich zur Einkaufsliste hinzugefügt.</string>
    <string name="assistent_msg_shoppingitem_with_param_deleted">Alle Einkaufselemente mit der Angabe # wurden gelöscht.</string>
    <string name="assistent_question_delete_all_shopping">Soll wirklich die ganze Einkaufsliste gelöscht werden?</string>
    <string name="assistent_question_delete_all_shopping_with_name">Sollen wirklich alle Einkaufselemente mit der Angabe # gelöscht werden?</string>
    <string name="assistent_question_delete_all_shopping_with_name_and_plural">Sollen wirklich alle Einkaufselemente mit der Angabe # in Ein- und Mehrzahl gelöscht werden?</string>
    <string name="assistent_msg_delete_failed">Leider konnte die Löschaktion aufgrund ungültiger Eingaben nicht durchgeführt werden. Bitte versuche es erneut!</string>
    <string name="assistent_msg_inventory_added">Inventar wurde erfolgreich erweitert!</string>
    <string name="assistent_const_inventory_default_location" />
    <string name="assistent_question_delete_all_inventory">Soll wirklich das gesamte Inventar gelöscht werden?</string>
    <string name="assistent_question_delete_all_inventory_with_name">Sollen wirklich alle Inventarelemente mit der Angabe # gelöscht werden?</string>
    <string name="assistent_msg_inventoryitem_with_param_deleted">Alle Inventarelemente mit der Angabe # wurden gelöscht.</string>
    <string name="assistent_question_delete_all_inventory_with_name_and_plural">Sollen wirklich alle Inventarelemente mit der Angabe # in Ein- und Mehrzahl gelöscht werden?</string>
    <string name="assistent_question_delete_all_inventory_with_location">Sollen wirklich alle Inventarelemente mit der Angabe # aus dem Ort ~ gelöscht werden?</string>
    <string name="assistent_msg_inventoryitem_with_param_deleted_with_location">Alle Inventarelemente mit der Angabe # wurden aus dem Ort ~ gelöscht.</string>
    <string name="assistent_question_delete_all_inventory_with_name_and_plural_with_location">Sollen wirklich alle Inventarelemente mit der Angabe # in Ein- und Mehrzahl gelöscht werden?</string>
    <string name="assistent_question_clear_location">Sollen wirklich alle Elemente aus dem Ort ~ gelöscht werden?</string>
    <string name="assistent_msg_clear_location">Alle Elemente aus dem Ort ~ wurden gelöscht.</string>
    <string name="assistent_msg_recipe_action_failed">Die gewünschte Aktion in der Rezeptverwaltung ist fehlgeschlagen. Bitte versuche es erneut.</string>
    <string name="assistent_msg_recipe_not_found">Das Rezept konnte nicht gefunden werden. Bitte stelle sicher, dass es in der Rezeptverwaltung existiert oder wiederhole den Sprachbefehl.</string>
    <string name="assistent_question_show_recommended_recipe">Das Rezept # wurde ausgewählt. Soll es geöffnet werden?</string>
    <string name="data_transfer_intent_edit_shoppingitem">shoppingitemedit</string>
    <string name="data_transfer_intent_edit_ingredient_name">ingredientname</string>
    <string name="data_transfer_intent_edit_ingredient_unit">ingredientunit</string>
    <string name="data_transfer_intent_edit_ingredient_count">ingredientcount</string>
    <string name="data_transfer_intent_edit_ingredient_id">ingredientid</string>
    <string name="data_transfer_intent_edit_recipe_name">recipename</string>
    <string name="data_transfer_intent_edit_recipe_id">recipeid</string>
    <string name="data_transfer_intent_recipe_cook_request">cookrequest</string>
    <string name="data_units_item">Stück</string>
    <string name="data_units_gram">Gramm</string>
    <string name="data_units_kilogram">Kilogramm</string>
    <string name="data_units_millilitre">Milliliter</string>
    <string name="data_units_litre">Liter</string>
    <string name="data_units_pack">Packung</string>
    <string name="question_amount">Wie viel?</string>
    <string-array name="small_units">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
</resources>