<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_shopping"
        android:icon="@drawable/shopping_svg"
        android:title="@string/title_shopping" />

    <item
        android:id="@+id/navigation_inventory"
        android:icon="@drawable/inventory_svg"
        android:title="@string/title_inventory" />

    <item
        android:id="@+id/navigation_recipes"
        android:icon="@drawable/recipe_svg"
        android:title="@string/title_recipes" />

    <!--<item
        android:id="@+id/navigation_money"
        android:icon="@drawable/baseline_attach_money_black_18dp"
        android:title="@string/title_money" />-->

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings_svg"
        android:title="@string/title_settings" />




</menu>
