<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.activities.inventoryedit.InventoryItemEditActivity">

    <RelativeLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/inventory_item_tv_what"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/inventory_edit_title_name"
            android:textSize="18sp"
            android:textColor="@color/colorAccent">

        </TextView>

        <AutoCompleteTextView
            android:id="@+id/inventory_item_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inventory_item_tv_what"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="@string/inventory_edit_input_name_hint"
            android:completionThreshold="1"
            android:hint="@string/inventory_edit_input_name_hint"
            android:inputType="text"
            android:imeOptions="flagNoExtractUi">

        </AutoCompleteTextView>

        <AutoCompleteTextView
            android:id="@+id/inventory_item_edit_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inventory_item_edit_name"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="@string/inventory_edit_input_location_hint"
            android:completionThreshold="1"
            android:hint="@string/inventory_edit_input_location_hint"
            android:inputType="text"
            android:imeOptions="flagNoExtractUi">

        </AutoCompleteTextView>

        <TextView
            android:id="@+id/inventory_item_tv_howmuch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inventory_item_edit_location"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/question_amount"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inventory_item_tv_howmuch"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/numpick_lin_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <NumberPicker
                    android:id="@+id/inventory_item_picker_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:descendantFocusability="blocksDescendants"
                    android:layout_marginLeft="64dp"
                    android:layout_marginStart="64dp">
                </NumberPicker>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <NumberPicker
                    android:id="@+id/inventory_item_picker_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:descendantFocusability="blocksDescendants"
                    android:layout_marginRight="64dp"
                    android:layout_marginEnd="64dp">
                </NumberPicker>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <Button
                    android:id="@+id/inventory_item_button_delete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@android:color/holo_red_dark"
                    android:text="@string/inventory_edit_button_delete_text"
                    android:textColor="@android:color/background_light"
                    android:layout_gravity="bottom">
                </Button>
            </LinearLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/inventory_item_input_count"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_below="@+id/inventory_item_tv_howmuch"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="96dp"
            android:ems="10"
            android:inputType="number|numberDecimal" />


    </RelativeLayout>

</ScrollView>