<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.activities.shoppingitem.ShoppingItemEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="32dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/recipe_edit_imgView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:adjustViewBounds="true"
                android:contentDescription="recipe_image"
                app:srcCompat="@mipmap/empty_picture" />


            <EditText
                android:id="@+id/recipe_edit_title_editTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:ems="12"
                android:hint="@string/recipe_title"
                android:inputType="textMultiLine"
                android:lines="2"
                android:minLines="1" />

        </LinearLayout>

        <EditText
            android:id="@+id/recipe_edit_description_editTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/recipe_description"
            android:inputType="textMultiLine"
            android:lines="8"
            android:maxLines="15"
            android:minLines="1" />

        <TextView
            android:id="@+id/recipe_edit_zutaten_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/recipe_ingredients"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recipe_edit_linlayout"
            android:orientation="vertical"
            android:layout_margin="8dp">
        </LinearLayout>

        <ImageButton
            android:id="@+id/recipe_edit_addIngredient_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:contentDescription="addIngredientsButton"
            android:background="@color/colorPrimary"
            app:srcCompat="@drawable/ic_add_white" />
    </LinearLayout>
</ScrollView>